# nix-template

./: README.md  flake.nix
go/: .envrc  .gitignore  LLM_RUELS.md  LLM_RULES.md  README.md  default.nix  docker.nix  flake.nix  go.mod  gomod2nix.toml  justfile  main.go  shell.nix
go/backend/: default.nix  go.mod  main.go
go/backend/proto/helloworld/: helloworld_grpc.pb.go
go/configs/: dev.env  local.env.example  prod.env  staging.env
go/deployments/: alerts.yml  compose-observability.yaml  grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml  tempo.yaml
go/deployments/dashboards/: alerts-overview.json  go-envoy-overview.json  kafka-overview.json
go/deployments/k8s/: apps-dev.tmpl.yaml  apps.yaml  dashboards.yaml  fluent-bit.yaml  observability.yaml  queue.yaml  runtime-config.yaml  storage.yaml
go/frontend/: default.nix  package.json  pnpm-lock.yaml
go/frontend/src/: App.vue
go/lib/: build-backend-only.nix  build-envoy-gateway.nix  build-image.nix  build-service.nix  build.nix
go/pkg/config/: loader.go  types.go  validator.go
go/pkg/errors/: errors.go
go/pkg/logger/: logger.go
go/pkg/proto/helloworld/: helloworld.proto  helloworld_grpc.pb.go
go/pkg/proto/notification/: notification.pb.go  notification.proto  notification_grpc.pb.go
go/pkg/telemetry/: telemetry.go
go/proto/helloworld/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
go/services/chat/backend/: go.mod  go.sum  gomod2nix.toml
go/services/chat/backend/cmd/server/: main.go
go/services/chat/backend/internal/application/: greet_user.go
go/services/chat/backend/internal/domain/: greeter.go
go/services/chat/frontend/: package.json  vite.config.ts
go/services/chat/frontend/src/: main.js
go/services/gateway/: envoy.tmpl.yaml
go/services/gateway/backend/: go.mod
go/services/greeter/backend/: go.mod  go.sum  gomod2nix.toml  main.go
go/services/greeter/frontend/: vite.config.ts
go/services/greeter/frontend/src/: main.js
go/services/landing/backend/: go.mod  go.sum  gomod2nix.toml
go/services/landing/frontend/: package.json  vite.config.ts
go/services/landing/frontend/src/: main.js
go/services/notification/backend/: go.mod  go.sum  gomod2nix.toml
go/services/shell/backend/: go.mod  go.sum  gomod2nix.toml
go/services/shell/frontend/: index.html  package.json  vite.config.ts
go/services/shell/frontend/src/: App.vue  main.js  tracing.js
go/shell/backend/: go.mod  go.sum  gomod2nix.toml
go/shell/backend/cmd/server/: main.go
go/shell/frontend/: package.json  vite.config.ts
go/shell/frontend/src/: App.vue  main.js  tracing.js
go/tests/: k3s-test.nix
python/: flake.nix  main.py  pyproject.toml
python-cuda/: flake.nix  justfile  pyproject.toml
python-cuda/my_python_project/: main.py
(+27 files in other folders)
