[project]
name = "rvc-beta"
version = "0.1.0"
description = ""
authors = [
    { name = "lj1995" }
]
license = { text = "MIT" }
requires-python = ">=3.9,<3.12"

dependencies = [
    # УБЕРИ отсюда torch, torchaudio, torchvision!
    "Cython>=3.0.11",
    "gradio==3.34.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "tensorboardX>=2.6.2.2",
    "fairseq==0.12.2",
    "faiss-cpu==1.7.3",
    "Jinja2>=3.1.2",
    "json5>=0.9.25",
    "librosa==0.9.1",
    "llvmlite==0.39.0",
    "Markdown>=3.6",
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "numba==0.56.4",
    "numpy==1.23.5",
    "scipy==1.13.1",
    "praat-parselmouth>=0.4.2",
    "Pillow>=9.1.1",
    "pyworld==0.3.2",
    "resampy>=0.4.2",
    "scikit-learn>=1.5.1",
    "tensorboard>=2.17.0",
    "tqdm>=4.63.1",
    "tornado>=6.1",
    "Werkzeug>=2.2.3",
    "uc-micro-py>=1.0.1",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "PyYAML>=6.0",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "fsspec>=2022.11.0",
    "absl-py>=1.2.0",
    "audioread>=3.0.1",
    "uvicorn>=0.21.1",
    "colorama>=0.4.5",
    "torchcrepe==0.0.20",
    "python-dotenv>=1.0.0",
    "av>=12.3.0",
    "joblib>=1.1.0",
    "httpx>=0.27.0",
    "onnxruntime-gpu>=1.18.1,<1.20",
    "fastapi==0.88",
    "torchfcpe>=0.0.4",
    "ffmpy==0.3.1",
    "aria2p>=0.12.1",
]

# ДОБАВЬ ЭТО - PyTorch в отдельную группу
[project.optional-dependencies]
cuda = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
]

# ДОБАВЬ источники для PyTorch
[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cuda", extra = "cuda" },
]
torchaudio = [
    { index = "pytorch-cuda", extra = "cuda" },
]

# ДОБАВЬ индекс для CUDA (используй cu121, как в рабочем проекте, т.к. у тебя CUDA 12.8)
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
